--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+===== HERBSTLUFTWM =====
+
+Copyright 2011 Thorsten Wißmann. All rights reserved.
+
+This software is licensed under the "Simplified BSD License".
+See LICENSE for details.
 
 ==== First steps ====
 # 1. compile it
