moved IRC channel from oftc to freenode

--- a/README
+++ b/README
@@ -19,8 +19,8 @@ A list of known bugs is listed in BUGS. If you found other bugs or need help
 (or want to make suggestions about the internal structure to provide a
 statusbar with dzen2), then contact:
     Thorsten Wißmann <edu _at _ thorsten _minus_ wissmann _dot_ de>
-or join the IRC-Channel:
-    #herbstluftwm on oftc
+or join the IRC channel:
+    #herbstluftwm on irc.freenode.net
 
 ==== Steps with installing ====
 # as user
