--- a/README
+++ b/README
@@ -8,7 +8,7 @@ See LICENSE for details.
 ==== Requirements ====
 Build dependencies:
     - build-environemnt (gcc/other compiler, make)
-    - asciidoc
+    - asciidoc (only when building from git, not when building from tarball)
 Runtime dependencies:
     - bash (if you use the default autostart file)
     - glib >= 2.24
