NEWS: better expression for future release

--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
-herbstluftwm NEWS -- history of user-visible changes
+herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
-Release 0.2 FUTURE
-------------------
+Next release: 0.2
+-----------------
 
 Small bugfixes and major features:
 
