--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
-Next release: 0.2
------------------
+Release 0.2 on 2012-01-25
+-------------------------
 
 Small bugfixes and major features:
 
