add hook: window_title_changed

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Next release: 0.3
 
 Changes:
 
+    * new hook: window_title_changed
     * hook focus_changed now also reports the window title
 
 Release 0.2 on 2012-01-25
