README: added how to use Mod1 on Mac OS X
Enhance the README with a short description on how to set the Mod1 key
on Mac OS X.

--- a/README
+++ b/README
@@ -89,8 +89,24 @@ herbstclient is rather simple:
     stdout  <----|      |<---'
                  +------+
 
+==== Quirks ====
+Mac OSX:
 
+Problem: Mod1 is nowhere to be found.
+Solution: Set left Command (Apple) key to be Mod1.
+edit .Xmodmap
+--- snip ---
+! Make the Alt/Option key be Alt_L instead of Mode_switch
+keycode 63 = Alt_L
 
+! Make Meta_L be a Mod4 and get rid of Mod2
+clear mod2
+clear mod4
+add mod4 = Meta_L
 
+! Make Alt_L be a Mod1
+clear mod1
+add mod1 = Alt_L
+--- snap ---
 
 // vim: nowrap
