--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ Changes:
 
     * new hook: window_title_changed
     * hook focus_changed now also reports the window title
+    * the setting ignore_class is removed, because this also can be done by
+      rules. You can replace a line like 'set ignore_class "$foo"' in your
+      autostart by 'rule class~"$foo" manage=off'
 
 Release 0.2 on 2012-01-25
 -------------------------
