settings: toggle between 0 and old value
Remember the value when toggling a setting and restore this value if a
0 is toggled.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ Changes:
       rules. You can replace a line like 'set ignore_class "$foo"' in your
       autostart by 'rule class~"$foo" manage=off'
     * new green and gray color theme
+    * remember the value when toggling a setting and restore it on next toggle
 
 Release 0.2 on 2012-01-25
 -------------------------
