--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ Changes:
       autostart by 'rule class~"$foo" manage=off'
     * new green and gray color theme
     * remember the value when toggling a setting and restore it on next toggle
+    * new command: cycle_value
 
 Release 0.2 on 2012-01-25
 -------------------------
