--- a/NEWS
+++ b/NEWS
@@ -11,11 +11,14 @@ Changes:
     * the setting ignore_class is removed, because this also can be done by
       rules. You can replace a line like 'set ignore_class "$foo"' in your
       autostart by 'rule class~"$foo" manage=off'
-    * new green and gray color theme
     * remember the value when toggling a setting and restore it on next toggle
     * new command: cycle_value
     * new commands: use_index, move_index
     * recursive command completion for keybind
+    * in the default autostart:
+
+        - new green and gray color theme
+        - use/move was replaced by use_index/move_index
 
 Release 0.2 on 2012-01-25
 -------------------------
