respect new clients' initial fullscreen state

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,8 @@ Changes:
         - new green and gray color theme
         - use/move was replaced by use_index/move_index
     * proper signal handling: map all windows on SIGINT,SIGQUIT,SIGTERM
+    * respect the initial fullscreen state of new clients on startup (as it is
+      set in the _NET_WM_STATE property)
 
 Release 0.2 on 2012-01-25
 -------------------------
