--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,8 @@ Changes:
     * proper signal handling: map all windows on SIGINT,SIGQUIT,SIGTERM
     * respect the initial fullscreen state of new clients on startup (as it is
       set in the _NET_WM_STATE property)
+    * monitor locking mechanism, i.e. a new setting: monitors_locked with its
+      accessors lock and unlock
 
 Release 0.2 on 2012-01-25
 -------------------------
