--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
-Next release: 0.3
------------------
+Release 0.3 on 2012-04-12
+-------------------------
 
 Changes:
 
