panel.sh: toggle panel on hook togglehidepanel

--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,7 @@ Changes:
       set in the _NET_WM_STATE property)
     * monitor locking mechanism, i.e. a new setting: monitors_locked with its
       accessors lock and unlock and the command line argument -l and --locked
+    * toggle default panel on hook togglehidepanel
 
 Release 0.2 on 2012-01-25
 -------------------------
