--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ Changes:
     * toggle default panel on hook togglehidepanel
     * new setting: window_border_urgent_color
     * new command: set_monitors
+    * new command: jumpto
 
 Release 0.3 on 2012-04-12
 -------------------------
