--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@ Changes:
     * new setting: window_border_urgent_color
     * new command: set_monitors
     * new command: jumpto
+    * use clock_get_time on systems with a mach kernel (typically Mac OS X).
+      This lets herbstluftwm run on Mac systems again.
 
 Release 0.3 on 2012-04-12
 -------------------------
